# apographon

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  vetting.html  viewer.html
.github/workflows/: ci.yml  pages.yml
css/: reader.css
data/: processed  sample.json
data/documents/: wellmann.json  wellmann_p1_15.json
data/processed/: README.md
data/raw/: example.html  wellmann.html
data/vetted/: wellmann-auto.json
docs/: usage.md
js/: reader.js
prompts/: improve_pass.md  runbook_fulltext.md  translator_german.md  translator_greek.md  translator_latin.md  translator_orchestrator.md
scripts/: build_epub.sh  codex_run_all.sh  compact_glossary.jq  decide_glossary.jq  glossary_compact.sh  html_to_json.py  translation_pipeline.py  validate_tei.sh
src/apographon/: __init__.py  cleaner.py  cli.py  converter.py  pandoc_wrapper.py  tei_generator.py
src/german_book_converter/: __init__.py  cli.py  converter.py  epub_generator.py  tei_generator.py  utils.py
src/scripts/: env_check.py
templates/css/: epub_styles.css
templates/pandoc/: epub_metadata.yaml  tei_template.xml
templates/tei/: tei-viewer.xsl
templates/viewer/: index.html  viewer.css  viewer.js
tests/: test_converter.py  test_tei.py
tests/fixtures/: sample.html
