[tool]
name = "german-book-converter"
version = "0.1.0"
description = "A project to convert a 19th-century German academic book from HTML to reflowable EPUB and TEI XML."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "german-book-converter"
version = "0.1.0"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "pypandoc",
    "click",
    "pytest",
]

[tool.poetry.scripts]
german-book-converter = "german_book_converter.cli:main"