[tool]
name = "apographon"
version = "0.1.0"
description = "A project to convert a 19th-century German academic book from HTML to TEI XML and a static reader."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "apographon"
version = "0.1.0"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "click",
    "pytest",
]

[tool.poetry.scripts]
apographon = "apographon.cli:main"
german-book-converter = "apographon.cli:main"
